The repository layer now return optionals when performing a read or delete